Add new translations

--- a/lang/es.json
+++ b/lang/es.json
@@ -18,5 +18,7 @@
   "Technical skills": "Habilidades técnicas",
   "Here are the technologies and tools I specialize in as a laravel developer": "Estas son las tecnologías que suelo usar como desarrollador laravel",
   "Used technologies": "Tecnlogías usadas",
-  "Here are some of my recent projects that I've made in my free time": "Estos son mis proyectos más recientes"
+  "Here are some of my recent projects that I've made in my free time": "Estos son mis proyectos más recientes",
+  "When I'm not coding, I enjoy wathcing anime, reading manga and listen to metal music.": "Cuando no estoy trabajando, me gusta ver anime, leer manga y escuchar metal.",
+  "I'm a backend developer with 3+ years of experience specializing in Laravel development. I focus on creating efficient and secure web applications and api.": "Soy un desarrollador backend con 3+ años de experiencia con Laravel, me dedico a crear aplicaciones web y api seguras y eficientes."
 }
